--- a/TODO
+++ b/TODO
@@ -2,8 +2,8 @@ graphQL:
   ✔ create lobby @done(20-05-10 14:50)
   ✔ join lobby @done(20-05-10 23:55)
 websocket:
-  ☐ updates about someone joining the lobby
-  ☐ start game
+  ✔ updates about someone joining the lobby @done(20-05-13 00:42)
+  ✔ start game @done(20-05-13 00:42)
   ☐ confirm word/that you're cool
   ☐ answer question
   ☐ vote
