--- a/TODO
+++ b/TODO
@@ -14,6 +14,11 @@ handle WS disconnection:
   ☐ when voting
   ✔ when in lobby @done(20-05-14 00:46)
 
+still left:
+  ☐ Register
+  ☐ Login
+  ☐ OAuth
+
 things to fix:
   ☐ lobby process should timeout after 1min of inactivity
 
