--- a/TODO
+++ b/TODO
@@ -15,8 +15,8 @@ handle WS disconnection:
   ✔ when in lobby @done(20-05-14 00:46)
 
 still left:
-  ☐ Register
-  ☐ Login
+  ✔ Register @started(20-05-17 14:37) @done(20-05-17 16:04) @lasted(1h27m14s)
+  ✔ Login @done(20-05-17 16:04)
   ☐ OAuth
 
 things to fix:
